Hoàn thiện trang đăng nhập

--- a/HKT_SHOP/src/main/webapp/login-page-devforum/css/login-style.css
+++ b/HKT_SHOP/src/main/webapp/login-page-devforum/css/login-style.css
@@ -6,7 +6,7 @@
 body,
 html {
     background-color: #f0f2f5;
-    background-image: url(../images/bookshelf.jpg);
+    background-image: url(../images/hktshop-background-banner.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100%;
